Fix CORS for Vercel frontend